# version-commit-hook

./: .pre-commit-hooks.yaml  pyproject.toml  version_commit_hook.py
